# loop-orchestrator

./: .gitignore  AGENTS.md  CONTRACT.md  LICENSE  Makefile  README.md  loop-adr.sh  loop-digest.sh  loop-dispatch.sh  loop-lane-status.sh  loop-tmux.sh  pyproject.toml  web-to-coord.md
config-templates/: janitor.engine.yaml  partner.engine.yaml
docs/: operating-doctrine.md
examples/: lane-config.example.yaml  madr-decision.lane-config.yaml
lib/: harness-registry.sh  lane-config-resolver.sh  lane-health.sh  lane-worktree.sh
ops-wiki/: checkpoint.md  index.md  log.md
scripts/: loop-checkpoint.sh  loop-jira-sync.sh  loop-metrics.sh  loop-task-lint.sh  loop-wiki-lint.sh  loop-wiki-pending.sh
tasks/: README.md  T0005-nightly-lint-lane.md  T0006-metrics-keep-discard.md  T0019-standing-worker-lane-field.md  T0020-demand-provision-retire-policy.md  T0021-canonical-ledger-boot-projection.md  T0022-decision-log-retention.md  T0023-lane-handoff-breadcrumb.md  T0024-projection-nondestructive-fallback.md  T0025-worktree-isolation-lifecycle.md  T0026-conditional-provisioning-integration-lane.md  T0027-gate-harness-from-config-fallback.md  T0028-phase5-full-lane-handoff.md  T0029-f7-observe-graceful-degrade.md  T0030-seed-blank-jira-key.md  T0031-loop-restart-wrapper.md  T0032-defensive-stop-decisions.md  T0033-cross-session-deck.md  T0034-harness-aware-gate-residual.md  T0035-ledger-loop-registry-sync.md  T0042-engine-ingest-resilience-bound-timeout-and-quarantine.md  T0066-cost-metric-accuracy.md  T0067-phantom-gate-at-base-case.md
tests/: conftest.py  test_actions.py  (+31 more)
(+88 files in other folders)
