[project]
name = "loop-orchestrator"
version = "0.1.0"
description = "Deterministic engine + TUI flight deck for loop-orchestrator tmux sessions (optional Python layer over the bash substrate)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6",
    "textual>=0.80,<8",
]

[project.scripts]
loop-engine = "loop_orchestrator.engine.cli:main"
loop-deck = "loop_orchestrator.deck.cli:main"
loop-pm = "loop_orchestrator.pm.cli:main"

[project.entry-points."loop_orchestrator.pm_adapters"]
jira = "loop_orchestrator.pm.jira:JiraAdapter"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loop_orchestrator"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
